# GUI

./: Cargo.toml  README.md
src/: action.rs  actions.rs  app.rs  commands.rs  constants.rs  gui.rs  lib.rs  node.rs
src/helpers/: actions.rs  commands.rs  handlers.rs  mod.rs  types.rs
src/logic/: mod.rs  state.rs
src/logic/actions/: chat.rs  drone.rs  general.rs  media.rs  mod.rs  topology.rs
src/logic/handlers/: commands.rs  event.rs  mod.rs
src/logic/nodes/: constructors.rs  mod.rs  node.rs  types.rs
src/logic/nodes/params/: chat.rs  drone.rs  media.rs  mod.rs
src/ui/: legend.rs  main_ui.rs  mod.rs  network.rs  node.rs  spawn.rs
