[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
toml = "0.8.19"
rand = "0.9.0"
thiserror = "2.0.11"
colored = "3"
log = "0.4.25"

eframe = { version = "0.30.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }